<resources>
    <string name="app_name">TechWright Demo</string>

    <string name="title_activity_scan_qr_code">Scan</string>
    <string name="qc_code_close">Close</string>
    <string name="qr_code_select_picture">Picture</string>
    <string name="qr_code_open_flash_light">Open flash light</string>
    <string name="qr_code_close_flash_light">Close Flash Light</string>
    <string name="qr_code_auto_scan_notification">Position QR Code</string>
    <string name="qr_code_notification">Notification</string>
    <string name="qr_code_camera_not_open">Could not open your camera</string>
    <string name="qr_code_positive_button_know">OK</string>
    <string name="qr_code_positive_button_confirm">Confirm</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">Could not read your image.Try another image~</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">Sorry, could not open scan content</string>
    <string name="qr_code_camera_not_found">Could not detect camera</string>


    <string name="please_wait">Please Wait</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="qr_code">QR Code</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_pass">Please enter a valid password</string>
    <string name="please_enter_password">"Please enter password."</string>
    <string name="please_enter_repeat_password">"Please enter repeat password."</string>
    <string name="password_and_repeat_password_must_be_same">"Password and repeat password must be same."</string>
    <string name="please_enter_current_password">"Please enter current password."</string>
    <string name="please_enter_new_password">"Please enter new password."</string>
    <string name="please_enter_email_address">"Please enter email id."</string>
    <string name="please_enter_valid_email_address">"Please enter a valid email id."</string>
    <string name="password_must_be_at_least___">"Password must be at least 8 characters long, must contain at least one number and one special character (`~!@#$%^&amp;*()-_+=)."</string>
    <string name="confirm_password">Confirm Password</string>


    <string name="added_cart">Added to Cart</string>
    <string name="price_details">Details</string>
    <string name="quantity_colon">Quantity:</string>
    <string name="price_colon">Price:</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="orders">Orders</string>
    <string name="my_addresses">My Addresses</string>
    <string name="guest">Hi Guest</string>
    <string name="delivery">Delivery</string>
    <string name="cartlist">My Cart</string>
    <string name="continue_str">Continue</string>
    <string name="my_address">My Address</string>
    <string name="edit">Edit</string>
    <string name="edit_address">Edit Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="india">India</string>
    <string name="pin_code">Pin-code</string>
    <string name="addres_one">Address One</string>
    <string name="address_two">Address Two</string>
    <string name="landmark">Landmark</string>
    <string name="customized_product">Customized Product</string>
    <string name="price">Price</string>
    <string name="error_upload_pro">Error to upload product. Please check your internet connection!</string>
    <string name="error">Error!</string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="order_confirmed">Ordered!</string>
    <string name="thank_you_your_order_has_been_placed">Thank you, your order has been placed.</string>
    <string name="an_email_confirmation_has_been_sent_to_you">An email confirmation has been sent to you.</string>
    <string name="order_id">ORDER ID:</string>
    <string name="go_cart">Go to Cart</string>
    <string name="profile_updated">Profile Successfully Updated</string>
    <string name="password_updated">Password Successfully Updated</string>
    <string name="remove_wishlist">Removed from Wishlist</string>
    <string name="added_wishlist">Successfully added to Wishlist</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="send_email">Send Email</string>
    <string name="return_str">Return</string>
    <string name="orderlist">Orders</string>
    <string name="please_add_add">Please add a delivery address first</string>
    <string name="address_removed">Address Removed Successfully</string>
    <string name="enter_number">Enter number here</string>
    <string name="order_details">Order Details</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="other_items_in_this_order">OTHER ITEMS IN THIS ORDER</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="order_date">Order Date</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax</string>
    <string name="quantity">Quantity</string>
    <string name="order_status">Order Status</string>
    <string name="store">Store</string>
    <string name="error_retrieve_order">Error to retrieve order details</string>
    <string name="completed">Completed</string>
    <string name="failed">Failed</string>
    <string name="verify">Verify</string>
    <string name="verified">Verified</string>

</resources>
